Starting model training

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T02:35:56.322347300Z",
-     "start_time": "2023-12-23T02:35:56.312332Z"
+     "end_time": "2023-12-26T02:20:44.864953700Z",
+     "start_time": "2023-12-26T02:20:44.859456Z"
     }
    },
    "outputs": [],
@@ -19,11 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T02:35:57.165053700Z",
-     "start_time": "2023-12-23T02:35:57.145158600Z"
+     "end_time": "2023-12-26T02:20:45.510312200Z",
+     "start_time": "2023-12-26T02:20:45.506812500Z"
     }
    },
    "outputs": [],
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T02:36:00.650510600Z",
-     "start_time": "2023-12-23T02:35:59.021188300Z"
+     "end_time": "2023-12-26T02:20:52.035826500Z",
+     "start_time": "2023-12-26T02:20:50.776329400Z"
     }
    },
    "outputs": [],
@@ -197,10 +197,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-26T02:22:41.286443400Z",
+     "start_time": "2023-12-26T02:22:40.839944200Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "           Class      Time    Amount\nV17    -0.326481 -0.073297  0.007309\nV14    -0.302544 -0.098757  0.033751\nV12    -0.260593  0.124348 -0.009542\nV10    -0.216883  0.030617 -0.101502\nV16    -0.196539  0.011903 -0.003910\nV3     -0.192961 -0.419618 -0.210880\nV7     -0.187257  0.084714  0.397311\nV18    -0.111485  0.090438  0.035650\nV1     -0.101347  0.117396 -0.227709\nV9     -0.097733 -0.008660 -0.044246\nV5     -0.094974  0.173072 -0.386356\nV6     -0.043643 -0.063016  0.215981\nTime   -0.012323  1.000000 -0.010596\nV24    -0.007221 -0.016182  0.005146\nV13    -0.004570 -0.065902  0.005293\nV15    -0.004223 -0.183453 -0.002986\nV23    -0.002685  0.051142 -0.112633\nV22     0.000805  0.144059 -0.064801\nV25     0.003308 -0.233083 -0.047837\nV26     0.004455 -0.041407 -0.003208\nAmount  0.005632 -0.010596  1.000000\nV28     0.009536 -0.009413  0.010258\nV27     0.017580 -0.005135  0.028825\nV8      0.019875 -0.036949 -0.103079\nV20     0.020090 -0.050866  0.339403\nV19     0.034783  0.028975 -0.056151\nV21     0.040413  0.044736  0.105999\nV2      0.091289 -0.010593 -0.531409\nV4      0.133447 -0.105260  0.098732\nV11     0.154876 -0.247689  0.000104\nClass   1.000000 -0.012323  0.005632",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Class</th>\n      <th>Time</th>\n      <th>Amount</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>V17</th>\n      <td>-0.326481</td>\n      <td>-0.073297</td>\n      <td>0.007309</td>\n    </tr>\n    <tr>\n      <th>V14</th>\n      <td>-0.302544</td>\n      <td>-0.098757</td>\n      <td>0.033751</td>\n    </tr>\n    <tr>\n      <th>V12</th>\n      <td>-0.260593</td>\n      <td>0.124348</td>\n      <td>-0.009542</td>\n    </tr>\n    <tr>\n      <th>V10</th>\n      <td>-0.216883</td>\n      <td>0.030617</td>\n      <td>-0.101502</td>\n    </tr>\n    <tr>\n      <th>V16</th>\n      <td>-0.196539</td>\n      <td>0.011903</td>\n      <td>-0.003910</td>\n    </tr>\n    <tr>\n      <th>V3</th>\n      <td>-0.192961</td>\n      <td>-0.419618</td>\n      <td>-0.210880</td>\n    </tr>\n    <tr>\n      <th>V7</th>\n      <td>-0.187257</td>\n      <td>0.084714</td>\n      <td>0.397311</td>\n    </tr>\n    <tr>\n      <th>V18</th>\n      <td>-0.111485</td>\n      <td>0.090438</td>\n      <td>0.035650</td>\n    </tr>\n    <tr>\n      <th>V1</th>\n      <td>-0.101347</td>\n      <td>0.117396</td>\n      <td>-0.227709</td>\n    </tr>\n    <tr>\n      <th>V9</th>\n      <td>-0.097733</td>\n      <td>-0.008660</td>\n      <td>-0.044246</td>\n    </tr>\n    <tr>\n      <th>V5</th>\n      <td>-0.094974</td>\n      <td>0.173072</td>\n      <td>-0.386356</td>\n    </tr>\n    <tr>\n      <th>V6</th>\n      <td>-0.043643</td>\n      <td>-0.063016</td>\n      <td>0.215981</td>\n    </tr>\n    <tr>\n      <th>Time</th>\n      <td>-0.012323</td>\n      <td>1.000000</td>\n      <td>-0.010596</td>\n    </tr>\n    <tr>\n      <th>V24</th>\n      <td>-0.007221</td>\n      <td>-0.016182</td>\n      <td>0.005146</td>\n    </tr>\n    <tr>\n      <th>V13</th>\n      <td>-0.004570</td>\n      <td>-0.065902</td>\n      <td>0.005293</td>\n    </tr>\n    <tr>\n      <th>V15</th>\n      <td>-0.004223</td>\n      <td>-0.183453</td>\n      <td>-0.002986</td>\n    </tr>\n    <tr>\n      <th>V23</th>\n      <td>-0.002685</td>\n      <td>0.051142</td>\n      <td>-0.112633</td>\n    </tr>\n    <tr>\n      <th>V22</th>\n      <td>0.000805</td>\n      <td>0.144059</td>\n      <td>-0.064801</td>\n    </tr>\n    <tr>\n      <th>V25</th>\n      <td>0.003308</td>\n      <td>-0.233083</td>\n      <td>-0.047837</td>\n    </tr>\n    <tr>\n      <th>V26</th>\n      <td>0.004455</td>\n      <td>-0.041407</td>\n      <td>-0.003208</td>\n    </tr>\n    <tr>\n      <th>Amount</th>\n      <td>0.005632</td>\n      <td>-0.010596</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>V28</th>\n      <td>0.009536</td>\n      <td>-0.009413</td>\n      <td>0.010258</td>\n    </tr>\n    <tr>\n      <th>V27</th>\n      <td>0.017580</td>\n      <td>-0.005135</td>\n      <td>0.028825</td>\n    </tr>\n    <tr>\n      <th>V8</th>\n      <td>0.019875</td>\n      <td>-0.036949</td>\n      <td>-0.103079</td>\n    </tr>\n    <tr>\n      <th>V20</th>\n      <td>0.020090</td>\n      <td>-0.050866</td>\n      <td>0.339403</td>\n    </tr>\n    <tr>\n      <th>V19</th>\n      <td>0.034783</td>\n      <td>0.028975</td>\n      <td>-0.056151</td>\n    </tr>\n    <tr>\n      <th>V21</th>\n      <td>0.040413</td>\n      <td>0.044736</td>\n      <td>0.105999</td>\n    </tr>\n    <tr>\n      <th>V2</th>\n      <td>0.091289</td>\n      <td>-0.010593</td>\n      <td>-0.531409</td>\n    </tr>\n    <tr>\n      <th>V4</th>\n      <td>0.133447</td>\n      <td>-0.105260</td>\n      <td>0.098732</td>\n    </tr>\n    <tr>\n      <th>V11</th>\n      <td>0.154876</td>\n      <td>-0.247689</td>\n      <td>0.000104</td>\n    </tr>\n    <tr>\n      <th>Class</th>\n      <td>1.000000</td>\n      <td>-0.012323</td>\n      <td>0.005632</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr().sort_values(by=\"Class\")[['Class', 'Time', 'Amount']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
