implemented most of dashboard and adding logging feature

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-26T02:20:44.864953700Z",
-     "start_time": "2023-12-26T02:20:44.859456Z"
+     "end_time": "2023-12-29T01:23:03.896023400Z",
+     "start_time": "2023-12-29T01:23:03.888023400Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-26T02:20:45.510312200Z",
-     "start_time": "2023-12-26T02:20:45.506812500Z"
+     "end_time": "2023-12-29T01:23:03.907522600Z",
+     "start_time": "2023-12-29T01:23:03.895522800Z"
     }
    },
    "outputs": [],
@@ -49,8 +49,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-26T02:20:52.035826500Z",
-     "start_time": "2023-12-26T02:20:50.776329400Z"
+     "end_time": "2023-12-29T01:23:06.238915300Z",
+     "start_time": "2023-12-29T01:23:04.608413Z"
     }
    },
    "outputs": [],
@@ -60,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T02:36:03.878686500Z",
-     "start_time": "2023-12-23T02:36:03.825745Z"
+     "end_time": "2023-12-29T01:23:10.071326700Z",
+     "start_time": "2023-12-29T01:23:10.045830400Z"
     }
    },
    "outputs": [
@@ -73,7 +73,7 @@
       "text/plain": "   Time        V1        V2        V3        V4        V5        V6        V7  \\\n0   0.0 -1.359807 -0.072781  2.536347  1.378155 -0.338321  0.462388  0.239599   \n1   0.0  1.191857  0.266151  0.166480  0.448154  0.060018 -0.082361 -0.078803   \n2   1.0 -1.358354 -1.340163  1.773209  0.379780 -0.503198  1.800499  0.791461   \n3   1.0 -0.966272 -0.185226  1.792993 -0.863291 -0.010309  1.247203  0.237609   \n4   2.0 -1.158233  0.877737  1.548718  0.403034 -0.407193  0.095921  0.592941   \n\n         V8        V9  ...       V21       V22       V23       V24       V25  \\\n0  0.098698  0.363787  ... -0.018307  0.277838 -0.110474  0.066928  0.128539   \n1  0.085102 -0.255425  ... -0.225775 -0.638672  0.101288 -0.339846  0.167170   \n2  0.247676 -1.514654  ...  0.247998  0.771679  0.909412 -0.689281 -0.327642   \n3  0.377436 -1.387024  ... -0.108300  0.005274 -0.190321 -1.175575  0.647376   \n4 -0.270533  0.817739  ... -0.009431  0.798278 -0.137458  0.141267 -0.206010   \n\n        V26       V27       V28  Amount  Class  \n0 -0.189115  0.133558 -0.021053  149.62      0  \n1  0.125895 -0.008983  0.014724    2.69      0  \n2 -0.139097 -0.055353 -0.059752  378.66      0  \n3 -0.221929  0.062723  0.061458  123.50      0  \n4  0.502292  0.219422  0.215153   69.99      0  \n\n[5 rows x 31 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Time</th>\n      <th>V1</th>\n      <th>V2</th>\n      <th>V3</th>\n      <th>V4</th>\n      <th>V5</th>\n      <th>V6</th>\n      <th>V7</th>\n      <th>V8</th>\n      <th>V9</th>\n      <th>...</th>\n      <th>V21</th>\n      <th>V22</th>\n      <th>V23</th>\n      <th>V24</th>\n      <th>V25</th>\n      <th>V26</th>\n      <th>V27</th>\n      <th>V28</th>\n      <th>Amount</th>\n      <th>Class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>-1.359807</td>\n      <td>-0.072781</td>\n      <td>2.536347</td>\n      <td>1.378155</td>\n      <td>-0.338321</td>\n      <td>0.462388</td>\n      <td>0.239599</td>\n      <td>0.098698</td>\n      <td>0.363787</td>\n      <td>...</td>\n      <td>-0.018307</td>\n      <td>0.277838</td>\n      <td>-0.110474</td>\n      <td>0.066928</td>\n      <td>0.128539</td>\n      <td>-0.189115</td>\n      <td>0.133558</td>\n      <td>-0.021053</td>\n      <td>149.62</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.0</td>\n      <td>1.191857</td>\n      <td>0.266151</td>\n      <td>0.166480</td>\n      <td>0.448154</td>\n      <td>0.060018</td>\n      <td>-0.082361</td>\n      <td>-0.078803</td>\n      <td>0.085102</td>\n      <td>-0.255425</td>\n      <td>...</td>\n      <td>-0.225775</td>\n      <td>-0.638672</td>\n      <td>0.101288</td>\n      <td>-0.339846</td>\n      <td>0.167170</td>\n      <td>0.125895</td>\n      <td>-0.008983</td>\n      <td>0.014724</td>\n      <td>2.69</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1.0</td>\n      <td>-1.358354</td>\n      <td>-1.340163</td>\n      <td>1.773209</td>\n      <td>0.379780</td>\n      <td>-0.503198</td>\n      <td>1.800499</td>\n      <td>0.791461</td>\n      <td>0.247676</td>\n      <td>-1.514654</td>\n      <td>...</td>\n      <td>0.247998</td>\n      <td>0.771679</td>\n      <td>0.909412</td>\n      <td>-0.689281</td>\n      <td>-0.327642</td>\n      <td>-0.139097</td>\n      <td>-0.055353</td>\n      <td>-0.059752</td>\n      <td>378.66</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1.0</td>\n      <td>-0.966272</td>\n      <td>-0.185226</td>\n      <td>1.792993</td>\n      <td>-0.863291</td>\n      <td>-0.010309</td>\n      <td>1.247203</td>\n      <td>0.237609</td>\n      <td>0.377436</td>\n      <td>-1.387024</td>\n      <td>...</td>\n      <td>-0.108300</td>\n      <td>0.005274</td>\n      <td>-0.190321</td>\n      <td>-1.175575</td>\n      <td>0.647376</td>\n      <td>-0.221929</td>\n      <td>0.062723</td>\n      <td>0.061458</td>\n      <td>123.50</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2.0</td>\n      <td>-1.158233</td>\n      <td>0.877737</td>\n      <td>1.548718</td>\n      <td>0.403034</td>\n      <td>-0.407193</td>\n      <td>0.095921</td>\n      <td>0.592941</td>\n      <td>-0.270533</td>\n      <td>0.817739</td>\n      <td>...</td>\n      <td>-0.009431</td>\n      <td>0.798278</td>\n      <td>-0.137458</td>\n      <td>0.141267</td>\n      <td>-0.206010</td>\n      <td>0.502292</td>\n      <td>0.219422</td>\n      <td>0.215153</td>\n      <td>69.99</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 31 columns</p>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,34 +84,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T02:36:05.700365500Z",
-     "start_time": "2023-12-23T02:36:05.678533800Z"
+     "end_time": "2023-12-29T01:23:10.456311300Z",
+     "start_time": "2023-12-29T01:23:10.425312700Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "Time      0\nV1        0\nV2        0\nV3        0\nV4        0\nV5        0\nV6        0\nV7        0\nV8        0\nV9        0\nV10       0\nV11       0\nV12       0\nV13       0\nV14       0\nV15       0\nV16       0\nV17       0\nV18       0\nV19       0\nV20       0\nV21       0\nV22       0\nV23       0\nV24       0\nV25       0\nV26       0\nV27       0\nV28       0\nAmount    0\nClass     0\ndtype: int64"
+      "text/plain": "0"
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isna().sum()"
+    "df.isna().sum().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T02:36:07.407341500Z",
-     "start_time": "2023-12-23T02:36:07.372726300Z"
+     "end_time": "2023-12-29T01:23:10.664049200Z",
+     "start_time": "2023-12-29T01:23:10.633049100Z"
     }
    },
    "outputs": [
@@ -166,19 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-23T02:36:10.764734900Z",
-     "start_time": "2023-12-23T02:36:09.464719500Z"
+     "end_time": "2023-12-29T01:23:12.262046300Z",
+     "start_time": "2023-12-29T01:23:10.873045600Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "<seaborn.axisgrid.FacetGrid at 0x24851264e90>"
+      "text/plain": "<seaborn.axisgrid.FacetGrid at 0x27213c25ed0>"
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -197,11 +197,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-26T02:22:41.286443400Z",
-     "start_time": "2023-12-26T02:22:40.839944200Z"
+     "end_time": "2023-12-29T01:23:12.691544900Z",
+     "start_time": "2023-12-29T01:23:12.258546Z"
     }
    },
    "outputs": [
@@ -210,7 +210,7 @@
       "text/plain": "           Class      Time    Amount\nV17    -0.326481 -0.073297  0.007309\nV14    -0.302544 -0.098757  0.033751\nV12    -0.260593  0.124348 -0.009542\nV10    -0.216883  0.030617 -0.101502\nV16    -0.196539  0.011903 -0.003910\nV3     -0.192961 -0.419618 -0.210880\nV7     -0.187257  0.084714  0.397311\nV18    -0.111485  0.090438  0.035650\nV1     -0.101347  0.117396 -0.227709\nV9     -0.097733 -0.008660 -0.044246\nV5     -0.094974  0.173072 -0.386356\nV6     -0.043643 -0.063016  0.215981\nTime   -0.012323  1.000000 -0.010596\nV24    -0.007221 -0.016182  0.005146\nV13    -0.004570 -0.065902  0.005293\nV15    -0.004223 -0.183453 -0.002986\nV23    -0.002685  0.051142 -0.112633\nV22     0.000805  0.144059 -0.064801\nV25     0.003308 -0.233083 -0.047837\nV26     0.004455 -0.041407 -0.003208\nAmount  0.005632 -0.010596  1.000000\nV28     0.009536 -0.009413  0.010258\nV27     0.017580 -0.005135  0.028825\nV8      0.019875 -0.036949 -0.103079\nV20     0.020090 -0.050866  0.339403\nV19     0.034783  0.028975 -0.056151\nV21     0.040413  0.044736  0.105999\nV2      0.091289 -0.010593 -0.531409\nV4      0.133447 -0.105260  0.098732\nV11     0.154876 -0.247689  0.000104\nClass   1.000000 -0.012323  0.005632",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Class</th>\n      <th>Time</th>\n      <th>Amount</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>V17</th>\n      <td>-0.326481</td>\n      <td>-0.073297</td>\n      <td>0.007309</td>\n    </tr>\n    <tr>\n      <th>V14</th>\n      <td>-0.302544</td>\n      <td>-0.098757</td>\n      <td>0.033751</td>\n    </tr>\n    <tr>\n      <th>V12</th>\n      <td>-0.260593</td>\n      <td>0.124348</td>\n      <td>-0.009542</td>\n    </tr>\n    <tr>\n      <th>V10</th>\n      <td>-0.216883</td>\n      <td>0.030617</td>\n      <td>-0.101502</td>\n    </tr>\n    <tr>\n      <th>V16</th>\n      <td>-0.196539</td>\n      <td>0.011903</td>\n      <td>-0.003910</td>\n    </tr>\n    <tr>\n      <th>V3</th>\n      <td>-0.192961</td>\n      <td>-0.419618</td>\n      <td>-0.210880</td>\n    </tr>\n    <tr>\n      <th>V7</th>\n      <td>-0.187257</td>\n      <td>0.084714</td>\n      <td>0.397311</td>\n    </tr>\n    <tr>\n      <th>V18</th>\n      <td>-0.111485</td>\n      <td>0.090438</td>\n      <td>0.035650</td>\n    </tr>\n    <tr>\n      <th>V1</th>\n      <td>-0.101347</td>\n      <td>0.117396</td>\n      <td>-0.227709</td>\n    </tr>\n    <tr>\n      <th>V9</th>\n      <td>-0.097733</td>\n      <td>-0.008660</td>\n      <td>-0.044246</td>\n    </tr>\n    <tr>\n      <th>V5</th>\n      <td>-0.094974</td>\n      <td>0.173072</td>\n      <td>-0.386356</td>\n    </tr>\n    <tr>\n      <th>V6</th>\n      <td>-0.043643</td>\n      <td>-0.063016</td>\n      <td>0.215981</td>\n    </tr>\n    <tr>\n      <th>Time</th>\n      <td>-0.012323</td>\n      <td>1.000000</td>\n      <td>-0.010596</td>\n    </tr>\n    <tr>\n      <th>V24</th>\n      <td>-0.007221</td>\n      <td>-0.016182</td>\n      <td>0.005146</td>\n    </tr>\n    <tr>\n      <th>V13</th>\n      <td>-0.004570</td>\n      <td>-0.065902</td>\n      <td>0.005293</td>\n    </tr>\n    <tr>\n      <th>V15</th>\n      <td>-0.004223</td>\n      <td>-0.183453</td>\n      <td>-0.002986</td>\n    </tr>\n    <tr>\n      <th>V23</th>\n      <td>-0.002685</td>\n      <td>0.051142</td>\n      <td>-0.112633</td>\n    </tr>\n    <tr>\n      <th>V22</th>\n      <td>0.000805</td>\n      <td>0.144059</td>\n      <td>-0.064801</td>\n    </tr>\n    <tr>\n      <th>V25</th>\n      <td>0.003308</td>\n      <td>-0.233083</td>\n      <td>-0.047837</td>\n    </tr>\n    <tr>\n      <th>V26</th>\n      <td>0.004455</td>\n      <td>-0.041407</td>\n      <td>-0.003208</td>\n    </tr>\n    <tr>\n      <th>Amount</th>\n      <td>0.005632</td>\n      <td>-0.010596</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>V28</th>\n      <td>0.009536</td>\n      <td>-0.009413</td>\n      <td>0.010258</td>\n    </tr>\n    <tr>\n      <th>V27</th>\n      <td>0.017580</td>\n      <td>-0.005135</td>\n      <td>0.028825</td>\n    </tr>\n    <tr>\n      <th>V8</th>\n      <td>0.019875</td>\n      <td>-0.036949</td>\n      <td>-0.103079</td>\n    </tr>\n    <tr>\n      <th>V20</th>\n      <td>0.020090</td>\n      <td>-0.050866</td>\n      <td>0.339403</td>\n    </tr>\n    <tr>\n      <th>V19</th>\n      <td>0.034783</td>\n      <td>0.028975</td>\n      <td>-0.056151</td>\n    </tr>\n    <tr>\n      <th>V21</th>\n      <td>0.040413</td>\n      <td>0.044736</td>\n      <td>0.105999</td>\n    </tr>\n    <tr>\n      <th>V2</th>\n      <td>0.091289</td>\n      <td>-0.010593</td>\n      <td>-0.531409</td>\n    </tr>\n    <tr>\n      <th>V4</th>\n      <td>0.133447</td>\n      <td>-0.105260</td>\n      <td>0.098732</td>\n    </tr>\n    <tr>\n      <th>V11</th>\n      <td>0.154876</td>\n      <td>-0.247689</td>\n      <td>0.000104</td>\n    </tr>\n    <tr>\n      <th>Class</th>\n      <td>1.000000</td>\n      <td>-0.012323</td>\n      <td>0.005632</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,6 +218,69 @@
    "source": [
     "df.corr().sort_values(by=\"Class\")[['Class', 'Time', 'Amount']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Class\n0    284315\n1       492\nName: count, dtype: int64"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Class'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-29T01:23:15.348271600Z",
+     "start_time": "2023-12-29T01:23:15.340762200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "577.8760162601626"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "284315 / 492"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-29T01:23:24.229929600Z",
+     "start_time": "2023-12-29T01:23:24.214607800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "# Class 0 about 577 times more frequent than class 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-29T01:23:45.670354200Z",
+     "start_time": "2023-12-29T01:23:45.659854200Z"
+    }
+   }
   },
   {
    "cell_type": "code",
